--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,12 @@
 @use "./styles/global";
 
 .app {
-  text-align: center;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.main-section {
+  background-color: aqua;
+  height: 700px;
+  padding: 150px 50px 200px 50px ;
 }
