--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,11 +10,13 @@ body {
     color: map.get($colors, "text");
     margin: 0;
     padding: 0;
+    width: 100%;
+    display: block;
 }
 
 // 전체 컨테이너 스타일
 .container {
-  max-width: 1200px;
+  // max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
 }
