contact-content div 생성하여 여백 스타일 지정

--- a/src/styles/components/Contact.scss
+++ b/src/styles/components/Contact.scss
@@ -30,6 +30,10 @@
     gap: 15px;
   }
   
+  .contact-content {
+    margin-bottom: 20px;
+  }
+
   .contact-title {
     font-size: 2rem;
     font-weight: bold;
