카드 버튼 눌러도 다른 카드 상태 유지

--- a/src/styles/components/WorkExperience.scss
+++ b/src/styles/components/WorkExperience.scss
@@ -35,6 +35,12 @@
   transition: opacity 0.3s ease-in-out;
   position: relative;
 }
+
+.first-view p {
+    font-size: 16pt;
+    margin-top: 20px;
+}
+
 .second-view {
     padding: 20px;
 }
